--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 html {
-    background-color: black;
-    font-family: "Viga", Sans-serif;
+  background-color: black;
+  font-family: "Viga", Sans-serif;
+}
+
+.row {
+  display: flex;
 }
 
 .box {
-    text-align: center;
-    height: 250px;
-    width: 200px;
-    color: white;
-    border-style: solid;
-    border-color: white;
-    border-width: 1px;
+  text-align: center;
+  height: 250px;
+  width: 200px;
+  color: white;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
 }
 
 .pic {
-    height: 200px;
-    width: 200px;
+  height: 200px;
+  width: 200px;
 }
 
 img {
-    margin: 20px;
-    height: 160px;
-    width: 160px;
+  margin: 20px;
+  height: 160px;
+  width: 160px;
 }
 
 .name {
-    line-height: 30px;
-    vertical-align: middle;
+  line-height: 30px;
+  vertical-align: middle;
 }
